--- a/trash_collector/templates/base.html
+++ b/trash_collector/templates/base.html
@@ -43,8 +43,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="{% url 'employees:dailyview'%}">My Daily Work</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'employees:index'%}">Home</a>
+          <a class="nav-link" href="{% url 'employees:create'%}">Register Employee</a>
           <a class="nav-link" href="#">Placeholder</a>
         </div>
       </div>
