Created a confirmation pickup page, still working on template

--- a/trash_collector/templates/base.html
+++ b/trash_collector/templates/base.html
@@ -45,7 +45,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="{% url 'employees:index'%}">Home</a>
           <a class="nav-link" href="{% url 'employees:create'%}">Register Employee</a>
-          <a class="nav-link" href="#">Placeholder</a>
+          <a class="nav-link" href="{% url 'employees:confirmpickup'%}"">Confirm Pickups</a>
         </div>
       </div>
     </div>
